# the-spymaster-bot

./: .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  Dockerfile  Makefile  README.md  main.tf  pyproject.toml  requirements-dev.txt  requirements-lint.txt  requirements-test.txt  requirements.txt  settings.toml
.github/actions/deploy/: action.yml
.github/actions/lint-install/: action.yml
.github/workflows/: cd.yml  deploy.yml  deployment.yml  dev-automation.yml  dev-stability.yml  development.yml  lint.yml  pipeline.yml  stability.yml  tests.yml
app/: lambda_handler.py  main.py  settings.toml  util.py
app/bot/: models.py  the_spymaster_bot.py
app/bot/handlers/: base.py  config_difficulty.py  config_language.py  config_model.py  config_solvers.py  continue_handler.py  custom.py  error.py  fallback.py  get_session.py  help.py  parse_handler.py  process_message.py  start.py  testing.py  warmup.py
app/bot/handlers/custom/: config_difficulty.py  config_language.py  config_model.py  config_solvers.py  custom.py
app/bot/handlers/gameplay/: next_move.py  process_message.py  start.py
app/bot/handlers/internal/: testing.py  warmup.py
app/bot/handlers/other/: common.py  error.py  event_handler.py  fallback.py  help.py
app/bot/handlers/parse/: parse_board_handler.py  parse_done_handler.py  parse_fix_word_handler.py  parse_fixing_handler.py  parse_handler.py  parse_language_handler.py  parse_map_handler.py  photos.py
app/dynamo_persistence/: persistence.py  persistent_item.py  persistent_store.py  telegram_stores.py
app/persistence/: dynamo_db_persistence.py  persistence_item.py
bot/: config.py  handlers.py  lambda_handler.py  main.py  the_spymaster_bot.py
scripts/: build_layer.sh  run_server.sh  update.sh
src/: lambda_handler.py  main.py  settings.toml  util.py
src/bot/: config.py  dynamo_db_persistence.py  handlers.py  models.py  the_spymaster_bot.py
src/bot/handlers/: __init__.py  base.py  common.py  config_difficulty.py  config_language.py  config_model.py  config_solvers.py  continue_get_id.py  custom.py  error.py  get_session.py  help.py  load_models.py  next_move.py  parse_handler.py  process_message.py  start.py  testing.py  warmup.py
src/persistence/: dynamo_db_persistence.py  persistence_item.py
tests/: conftest.py  test_basics.py  test_nothing.py
tf/: .gitignore  .terraform.lock.hcl  Makefile  api.tf  app.Dockerfile  db.tf  dns.tf  image.tf  images.tf  layer.tf  main.tf  security.tf  service.tf  warmup.tf
tf/layer/: main.tf
tf_secrets/: .terraform.lock.hcl  Makefile  infra.tf  main.tf
tf_service/: .terraform.lock.hcl  Makefile  api.tf  code.tf  db.tf  main.tf  service.tf  warmup.tf
